Added routes for HMTL pages, added content to the About Me page.

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    <h1>[PAGE HEADING]</h1>
+    <h1>Emma Schmitz</h1>
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
@@ -15,6 +15,15 @@
             <li><a href="/products">Products</a></li>
         </ul>
     </nav>
-    <p>[Add some content specific to this page]</p>
+    <main>
+        <h2>Introduction</h2>
+        <p>Hi, I'm Emma! I'm a student at BYU-I majoring in software engineering with an emphasis in web development and design.</p>
+    <ol>
+        <h2>My Hobbies and Interests</h2>
+        <li>Reading</li>
+        <li>Knit/Crochet</li>
+        <li>Games (Stardew Valley/Fields of Mistria and Minecraft, mostly)</li>
+    </ol>
+    </main>
 </body>
 </html>
