--- a/src/views/home.html
+++ b/src/views/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    <h1>[PAGE HEADING]</h1>
+    <h1>Homepage</h1>
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
