--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: lightblue;
+    background-color: rgb(199, 173, 230);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
