feat: added image of me to about page, added websocket live reloading, though it may not be working as expected.

--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -2,6 +2,7 @@
 <main>
     <h1><%= title %></h1>
     <h2>Introduction</h2>
+    <img src="../../public/images/mypicture_small.jpg" alt="Portrait of Emma Schmitz in front of a lilac bush.">
     <p>Hi, I'm Emma! I'm a student at BYU-I majoring in software engineering with an emphasis in web development and design.</p>
 <ol>
     <h2>My Hobbies and Interests</h2>
