feat: added my portrait image to about me page and changed welcome text on homepage.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,4 +27,14 @@ body {
             }
         }
     }
+    img {
+        max-width: 250px;
+        border-radius: 15px;
+    }
+    main {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
+    }
 }
