feat: made some changes visually, changed 404 image fix: changed the broken misspelled NODE_ENV variable to enable live reloading.

--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -2,13 +2,13 @@
 <main>
     <h1><%= title %></h1>
     <h2>Introduction</h2>
-    <img src="/images/mypicture_small.jpg" alt="Portrait of Emma Schmitz in front of a lilac bush.">
+    <img src="/images/mypicture_small.jpg" alt="Picture of Emma Schmitz in front of a lilac bush.">
     <p>Hi, I'm Emma! I'm a student at BYU-I majoring in software engineering with an emphasis in web development and design.</p>
-<ol>
-    <h2>My Hobbies and Interests</h2>
-    <li>Reading</li>
-    <li>Knit/Crochet</li>
-    <li>Games (Stardew Valley/Fields of Mistria and Minecraft, mostly)</li>
-</ol>
+    <ol>
+        <h2>My Hobbies and Interests</h2>
+        <li>Reading</li>
+        <li>Knit/Crochet</li>
+        <li>Games (Stardew Valley/Fields of Mistria and Minecraft, mostly)</li>
+    </ol>
 </main>
 <%- include('partials/footer') %>
