--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,18 @@
 html, body {
-    background-color: rgb(199, 173, 230);
+    background-color: #e6b6f2;
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 20px;
+    box-sizing: border-box;
+    height: 100%;
+
 }
 
 body {
+    padding: 20px;
+    height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+
     nav {
         ul {
             list-style-type: none;
@@ -31,10 +38,11 @@ body {
         max-width: 250px;
         border-radius: 15px;
     }
-    main {
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        align-items: center;
-    }
+}
+
+footer {
+    padding: 20px;
+    margin: 20px -20px -20px -20px;
+    background-color: #4e3c59;
+    color: white;
 }
