--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -23,7 +23,7 @@
         </script>
     <% } %>
 </head>
-<body>
+<body class="<%= bodyClass %>">
     <header>
         <nav>
             <ul>
@@ -33,5 +33,6 @@
                 <li><a href="/products">Products</a></li>
                 <li><a href="/student">Student</a></li>
             </ul>
+            <p><%- greeting %></p>
         </nav>
     </header>
