--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #e6b6f2;
+    /* background-color: #e6b6f2; */
     font-family: Arial, sans-serif;
     margin: 0;
     box-sizing: border-box;
@@ -12,6 +12,9 @@ body {
     height: 100%;
     display: grid;
     grid-template-rows: auto 1fr auto;
+    &.blue-theme { background-color: #e3f2fd; }
+    &.green-theme { background-color: #e8f5e8; }
+    &.red-theme { background-color: #ffebee; }
 
     nav {
         ul {
@@ -43,6 +46,6 @@ body {
 footer {
     padding: 20px;
     margin: 20px -20px -20px -20px;
-    background-color: #4e3c59;
+    background-color: #363636;
     color: white;
 }
