--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@ body {
             list-style-type: none;
             padding: 0;
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
         }
 
         li {
