--- a/src/views/catalog/detail.ejs
+++ b/src/views/catalog/detail.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 <main>
     <div class="course-header">
         <h1><%= title %></h1>
@@ -50,4 +50,4 @@
         <p><a href="/catalog">&larr; Back to Course Catalog</a></p>
     </div>
 </main>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
