--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,6 +26,9 @@ body {
             padding: 0;
             display: flex;
             justify-content: space-around;
+            /* display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 20px; */
         }
 
         li {
