--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,9 +26,11 @@ body {
             padding: 0;
             display: flex;
             justify-content: space-around;
-            /* display: grid;
+            display: grid;
             grid-template-columns: repeat(5, 1fr);
-            gap: 20px; */
+            gap: 20px;
+            text-align: center;
+            align-self: center;
         }
 
         li {
