feat: completed RBAC activity

--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -1,5 +1,5 @@
 /* Registration Form Styles */
-.registration-form {
+.registration-form, .edit-form {
     max-width: 600px;
     margin: 2rem auto;
     padding: 2rem;
