--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -14,6 +14,10 @@
                     <span class="label">Email:</span>
                     <span class="value"><%= user.email %></span>
                 </p>
+                <div class="user-detail">
+                    <span class="label">Role:</span>
+                    <span class="value"><%= user.roleName %></span>
+                </div>
                 <p>
                     <span class="label">Date Created:</span>
                     <span class="value"><%= new Date(user.created_at).toLocaleDateString() %></span>
