feat: completed faculty images activity

--- a/src/views/faculty/details.ejs
+++ b/src/views/faculty/details.ejs
@@ -4,6 +4,7 @@
             <h1><%= title %></h1>
             <p class="faculty-title"><%= faculty.title %></p>
             <p class="faculty-department"><%= faculty.department %> Department</p>
+            <img class="faculty-photo" src="/images/faculty/<%= faculty.slug %>.jpg" alt="Portrait photo of <%= faculty.name %>">
         </div>
 
         <div class="faculty-contact">
